--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhvjt_UOzO4lUMFEBG_NA0DIOc_tbZobn4ePhabhLaip04tEzsOKRA7UVr5PBY6RWgAGM6ghJzEYc_QAv6YY3A7ve1-_p-owVckUGbeK-MZ-THxPphq3cRwpmxh_8i6l9D__nr7HGQE7xOjGkC_jYQV7p3DVuxtcB3ZsJM2S0VeaQp-_JARUf2jjKFIHGHy/w91-h56/plogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -25,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Sora Marketplace</title>
   </head>
   <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
